@@ -415,6 +415,7 @@ __ZN3WTF12randomNumberEv
 __ZN3WTF13MetaAllocator17addFreshFreeSpaceEPvm
 __ZN3WTF13MetaAllocator17freeFreeSpaceNodeEPNS0_13FreeSpaceNodeE
 __ZN3WTF13MetaAllocator18debugFreeSpaceSizeEv
+__ZN3WTF13MetaAllocator8allocateEmPv
 __ZN3WTF13MetaAllocatorC2Em
 __ZN3WTF13StringBuilder11shrinkToFitEv
 __ZN3WTF13StringBuilder15reserveCapacityEj
