@@ -1,3 +1,11 @@
+2012-01-30  Gavin Barraclough  <barraclough@apple.com>
+
+        Unreviewed build fix following bug#76855
+
+        * TestWebKitAPI/Tests/WTF/MetaAllocator.cpp:
+        ():
+        (TestWebKitAPI::TEST_F):
+
 2012-01-26  No'am Rosenthal  <noam.rosenthal@nokia.com> and Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>
 
         [Qt] WKTR: Use a software rendering pipiline when running tests.
