@@ -1,3 +1,9 @@
+2012-01-30  Gavin Barraclough  <barraclough@apple.com>
+
+        Unreviewed build fix following bug#76855
+
+        * JavaScriptCore.exp:
+
 2012-01-30  Michael Saboff  <msaboff@apple.com>
 
         CaseFoldingHash::hash() doesn't handle 8 bit strings directly
